16_subseq/grade.txt
Grading at Mon Aug 24 17:22:48 UTC 2020
Attempting to compile maxSeq.c 
maxSeq.c: In function ‘maxSeq’:
maxSeq.c:31:9: error: expected ‘;’ before ‘}’ token
         }
         ^
The code did not compile!

Overall Grade: F
